--- a/InstaFashionShopping/InstaFashionShopping/Admin.Master
+++ b/InstaFashionShopping/InstaFashionShopping/Admin.Master
@@ -19,61 +19,58 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <asp:ContentPlaceHolder ID="head" runat="server">
-    </asp:ContentPlaceHolder>
-        <style>
+    <asp:ContentPlaceHolder ID="head" runat="server"></asp:ContentPlaceHolder>
+    <style>
         .drop-menu {
-                position: absolute;
-                left: 0;
-                width: 220px;
-                height: fit-content;
-                top: 43px;
-                line-height: 35px;
-                background: #ffffff;
-                display: none;
-            }
-         header .navbar1 ul {
-        list-style: none;
-    }
-
+            position: absolute;
+            left: 0;
+            width: 220px;
+            height: fit-content;
+            top: 43px;
+            line-height: 35px;
+            background: #ffffff;
+            display: none;
+        }
+        header .navbar1 ul {
+            list-style: none;
+        }
         header .navbar1 ul li {
             position: relative;
-            float: left
+            float: left;
         }
         header .navbar1 ul li:focus-within > ul,
-            header .navbar1 ul li:hover > ul {
-                display: initial;
-                background-color:whitesmoke;
-            }
+        header .navbar1 ul li:hover > ul {
+            display: initial;
+            background-color: whitesmoke;
+        }
         .divider{
-              border-top: 3px solid grey;
+            border-top: 3px solid grey;
         }
     </style>
 </head>
 <body>
     <form id="form1" runat="server">
         <div>
-            <!-- header section starts  -->
- <header>
+            <!-- header section starts -->
+            <header>
                 <input type="checkbox" name="" id="toggler">
                 <label for="toggler" class="fas fa-bars"></label>
 
-                <a style="text-decoration: none; font-family: 'Merienda', cursive" href="UserHome.aspx" class="logo">Insta-Fashion<span></span></a>
+                <a style="text-decoration: none; font-family: 'Merienda', cursive" href="AdminHome.aspx" class="logo">Insta-Fashion<span></span></a>
 
                 <nav class="navbar1">
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Products</a>
-                        <ul class="drop-menu">
-                            <li><a href="AddProduct.aspx">Add Product</a></li>
-                            <li><a href="EditProduct.aspx">Edit Product</a></li>
-                            <li><a href="AddSizeQuantity.aspx">Add Size-Quantity</a></li>
-                            <li><a href="EditSizeQuantity.aspx">Update Quantity</a></li>
-                        </ul></li>
-                        <li><a href="ManageUsers.aspx">Users</a>
+                            <ul class="drop-menu">
+                                <li><a href="AddProduct.aspx">Add Product</a></li>
+                                <li><a href="EditProduct.aspx">Edit Product</a></li>
+                                <li><a href="AddSizeQuantity.aspx">Add Size-Quantity</a></li>
+                                <li><a href="EditSizeQuantity.aspx">Update Quantity</a></li>
+                            </ul>
                         </li>
-                        <li><a href="#">Orders</a>
-                        </li>
+                        <li><a href="ManageUsers.aspx">Users</a></li>
+                        <li><a href="#">Orders</a></li>
                         <li><a href="#">Manage</a>
                             <ul class="drop-menu">
                                 <li><a href="AddBrand.aspx">Add Brand</a></li>
@@ -90,12 +87,11 @@
                         </li>
                     </ul>
                 </nav>
-               
+
                 <div class="icons">
                     <asp:Label ID="Label1" runat="server" Text="Welcome Admin!" Font-Bold="True" Font-Italic="True" Font-Size="Large" ForeColor="Red" style="font-family: 'Merienda', cursive"></asp:Label>
                     <a style="text-decoration: none" href="UserProfile.aspx" class="fas fa-user"></a>
-                    <a style="text-decoration: none" ><asp:Button ID="btnLogout" runat="server" Text="Logout"  CssClass="btnlogout" CausesValidation="False"/></a>
-                
+                    <a style="text-decoration: none"><asp:Button ID="btnLogout" runat="server" Text="Logout" CssClass="btnlogout" CausesValidation="False" OnClick="btnLogout_Click"/></a>
                 </div>
 
             </header>
@@ -107,52 +103,46 @@
         <br />
         <br />
 
-        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-        </asp:ContentPlaceHolder>
+        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server"></asp:ContentPlaceHolder>
     </form>
+
     <div>
         <!-- footer section starts-->
-            <div>
-                <section class="footer">
-
-                    <div class="box-container">
-
-                        <div class="box">
-                            <h1>quick links</h1>
-                            <a href="UserHome.aspx">home</a>
-                            <a href="Mens.aspx">men</a>
-                            <a href="Womens.aspx">women</a>
-                            <a href="Kis.aspx">kids</a>
-                        </div>
-
-                        <div class="box">
-                            <h1>User links</h1>
-                            <a href="UserProfile.aspx">my account</a>
-                            <a href="UserOrders.aspx">my order</a>
-                            <a href="Wishlist.aspx">my wishlist</a>
-                            <a href="ContactUs.aspx">kids</a>
-                        </div>
-
-                        <div class="box">
-                            <h1>locations</h1>
-                            <a >Mumbai</a>
-                            <a >Thane</a>
-                            <a >Surat</a>
-                            <a >Pune</a>
-                        </div>
-
-                        <div class="box">
-                            <h1>Contact Info</h1>
-                            <a>9699287314</a>
-                            <a>instafashion@gmail.com</a>
-                            <a>mumbai, india - 400092</a>
-                            <img src="imgs/payment.png" />
-                        </div>
+        <div>
+            <section class="footer">
+                <div class="box-container">
+                    <div class="box">
+                        <h1>quick links</h1>
+                        <a href="UserHome.aspx">home</a>
+                        <a href="Mens.aspx">men</a>
+                        <a href="Womens.aspx">women</a>
+                        <a href="Kis.aspx">kids</a>
                     </div>
-                    <div class="credit">created by <span>Annapurna Gupta </span>| © 2023 Copyright all rights reserved </div>
-                </section>
-            </div>
-
+                    <div class="box">
+                        <h1>User links</h1>
+                        <a href="UserProfile.aspx">my account</a>
+                        <a href="UserOrders.aspx">my order</a>
+                        <a href="Wishlist.aspx">my wishlist</a>
+                        <a href="ContactUs.aspx">kids</a>
+                    </div>
+                    <div class="box">
+                        <h1>locations</h1>
+                        <a>Mumbai</a>
+                        <a>Thane</a>
+                        <a>Surat</a>
+                        <a>Pune</a>
+                    </div>
+                    <div class="box">
+                        <h1>Contact Info</h1>
+                        <a>9699287314</a>
+                        <a>instafashion@gmail.com</a>
+                        <a>mumbai, india - 400092</a>
+                        <img src="imgs/payment.png" />
+                    </div>
+                </div>
+                <div class="credit">created by <span>Annapurna Gupta</span> | © 2023 Copyright all rights reserved </div>
+            </section>
+        </div>
         <!-- footer section ends -->
     </div>
 </body>
